# snafu-tracing

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: errors.rs  gg.rs  kk.rs  m1.rs  m2.rs  main.rs
example/src/my_error/: context.rs  error.rs  location.rs  mod.rs
snafu-tracing/: Cargo.toml
snafu-tracing-macro/: Cargo.toml
snafu-tracing-macro/src/: errors.rs  lib.rs
snafu-tracing/src/: errors.rs  lib.rs
